--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,9 @@
 <h3>All registered users:</h3>
 <ul>
   <li *ngFor="let user of users">
-    {{user.username}} ({{user.firstName}} {{user.lastName}})
-    - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+    {{user.username}} ({{user.firstName}} {{user.lastName}})&nbsp;&nbsp;
+      <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+      <span class="text-secondary">&nbsp;-&nbsp;</span>
+      <a class="text-primary" routerLink="/editUser/{{user.id}}">Edit</a>
   </li>
 </ul>
